--- a/Index.HTML
+++ b/Index.HTML
@@ -3,63 +3,87 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Personal Website</title>
+    <title>3D Personal Odyssey</title>
     <style>
-        body { margin: 0; }
-        canvas { display: block; }
+        body { 
+            margin: 0; 
+            overflow: hidden; 
+            background: #000; 
+        }
+        canvas { 
+            display: block; 
+            z-index: 0; 
+        }
         #blocker {
             position: absolute;
             width: 100%;
             height: 100%;
-            background-color: rgba(0,0,0,0.5);
-        }
-        #instructions {
-            width: 100%;
-            height: 100%;
+            background: radial-gradient(circle, rgba(0,0,50,0.7), rgba(0,0,0,0.9));
+            z-index: 10;
             display: flex;
-            flex-direction: column;
             justify-content: center;
             align-items: center;
-            color: #ffffff;
-            text-align: center;
-            font-size: 14px;
+            transition: opacity 0.5s ease;
             cursor: pointer;
+        }
+        #instructions {
+            color: #00ffcc;
+            text-align: center;
+            font-family: 'Arial', sans-serif;
+            font-size: 24px;
+            padding: 30px;
+            background: rgba(0, 0, 20, 0.8);
+            border: 2px solid #00ffcc;
+            border-radius: 15px;
+            box-shadow: 0 0 20px rgba(0, 255, 204, 0.5);
+            transition: transform 0.3s ease, box-shadow 0.3s ease;
+            user-select: none;
+            -webkit-user-select: none;
+            -moz-user-select: none;
+            -ms-user-select: none;
+        }
+        #instructions:hover {
+            transform: scale(1.05);
+            box-shadow: 0 0 30px rgba(0, 255, 204, 0.8);
         }
         .content {
             position: absolute;
             top: 50%;
             left: 50%;
             transform: translate(-50%, -50%);
-            background: rgba(0, 0, 0, 0.7);
-            color: white;
-            padding: 20px;
+            background: rgba(0, 0, 20, 0.9);
+            color: #00ffcc;
+            padding: 25px;
             display: none;
             z-index: 1;
+            border-radius: 10px;
+            box-shadow: 0 0 15px rgba(0, 255, 204, 0.3);
+            font-family: 'Arial', sans-serif;
         }
     </style>
 </head>
 <body>
     <div id="blocker">
         <div id="instructions">
-            <p>Click to start</p>
-            <p>Move with WASD keys, look around with mouse</p>
+            <p>Click Anywhere or Press Space to Embark on a 3D Cosmic Journey</p>
+            <p>WASD to Navigate | Mouse to Explore | ESC to Pause</p>
         </div>
     </div>
     <div class="content" id="homeContent">
         <h1>Home</h1>
-        <p>Welcome to my personal website. Explore the 3D space to find more sections.</p>
+        <p>Welcome to my interstellar hub. Dive into the 3D void to uncover more.</p>
     </div>
     <div class="content" id="aboutContent">
         <h1>About Me</h1>
-        <p>This is where I will tell my story and share my background.</p>
+        <p>A traveler of code and cosmos, sharing my galactic tale.</p>
     </div>
     <div class="content" id="projectsContent">
         <h1>Projects</h1>
-        <p>Here, I will showcase my latest projects and accomplishments.</p>
+        <p>Behold my creations, forged in the stars of innovation.</p>
     </div>
     <div class="content" id="contactContent">
         <h1>Contact</h1>
-        <p>This section will have my contact information and social media links.</p>
+        <p>Transmit signals via my coordinates across the digital universe.</p>
     </div>
     <script src="https://unpkg.com/three/build/three.min.js"></script>
     <script src="https://threejs.org/examples/js/controls/PointerLockControls.js"></script>
