--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -6,88 +5,57 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>3D Personal Odyssey</title>
     <style>
-        body { 
-            margin: 0; 
-            overflow: hidden; 
-            background: #000; 
-        }
-        canvas { 
-            display: block; 
-            z-index: 0; 
-        }
-        #start-overlay {
-            position: absolute;
-            width: 100%;
-            height: 100%;
-            background: radial-gradient(circle, rgba(0,0,50,0.7), rgba(0,0,0,0.9));
-            z-index: 10;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            transition: opacity 0.5s ease;
-        }
-        #start-button {
-            color: #00ffcc;
-            text-align: center;
+        body {
+            margin: 0;
+            overflow: hidden;
+            background: #000;
             font-family: 'Arial', sans-serif;
-            font-size: 24px;
-            padding: 30px;
-            background: rgba(0, 0, 20, 0.8);
-            border: 2px solid #00ffcc;
-            border-radius: 15px;
-            box-shadow: 0 0 20px rgba(0, 255, 204, 0.5);
-            cursor: pointer;
-            transition: transform 0.3s ease, box-shadow 0.3s ease;
-            user-select: none;
-            -webkit-user-select: none;
-            -moz-user-select: none;
-            -ms-user-select: none;
         }
-        #start-button:hover {
-            transform: scale(1.05);
-            box-shadow: 0 0 30px rgba(0, 255, 204, 0.8);
+        canvas {
+            display: block;
         }
-        .content {
+        #info-panel {
             position: absolute;
             top: 50%;
             left: 50%;
             transform: translate(-50%, -50%);
             background: rgba(0, 0, 20, 0.9);
             color: #00ffcc;
-            padding: 25px;
-            display: none;
-            z-index: 1;
+            padding: 20px;
             border-radius: 10px;
             box-shadow: 0 0 15px rgba(0, 255, 204, 0.3);
-            font-family: 'Arial', sans-serif;
+            z-index: 2;
+            text-align: center;
+            display: none;
+        }
+        #info-panel h1 {
+            margin: 0 0 10px;
+            font-size: 24px;
+        }
+        #info-panel p {
+            margin: 0;
+            font-size: 16px;
+        }
+        #instructions {
+            position: absolute;
+            bottom: 20px;
+            left: 50%;
+            transform: translateX(-50%);
+            color: #00ffcc;
+            font-size: 14px;
+            background: rgba(0, 0, 20, 0.8);
+            padding: 10px;
+            border-radius: 5px;
         }
     </style>
 </head>
 <body>
-    <div id="start-overlay">
-        <div id="start-button">
-            <p>Press Here to Launch Cosmic Voyage</p>
-            <p>WASD to Navigate | Mouse to Explore</p>
-        </div>
+    <div id="info-panel">
+        <h1 id="info-title"></h1>
+        <p id="info-text"></p>
     </div>
-    <div class="content" id="homeContent">
-        <h1>Home</h1>
-        <p>Welcome to my interstellar hub. Dive into the 3D void to uncover more.</p>
-    </div>
-    <div class="content" id="aboutContent">
-        <h1>About Me</h1>
-        <p>A traveler of code and cosmos, sharing my galactic tale.</p>
-    </div>
-    <div class="content" id="projectsContent">
-        <h1>Projects</h1>
-        <p>Behold my creation, forged in the stars of innovation.</p>
-    </div>
-    <div class="content" id="contactContent">
-        <h1>Contact</h1>
-        <p>Transmit signals via my coordinates across the digital universe.</p>
-    </div>
+    <div id="instructions">Click the colored cubes to explore!</div>
     <script src="https://unpkg.com/three@0.173.0/build/three.min.js"></script>
-    <script src="https://threejs.org/examples/js/controls/PointerLockControls.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
